# crew-ai-demo-project

./: README.md  pyproject.toml
blogs/: blog.md
src/demo_crew/: crew.py  main.py
src/demo_crew/config/: agents.yaml  tasks.yaml
