[project]
name = "demo_crew"
version = "0.1.0"
description = "demo-crew using crewAI"
authors = [{ name = "Swastik Roy", email = "royswastik07@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==0.86.0",
    "lancedb==0.29.0",
    "duckdb==1.1.3",
    "setuptools==69.5.1"
]

[project.scripts]
demo_crew = "demo_crew.main:run"
run_crew = "demo_crew.main:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
